test/frontend/pass/types.osl
shader foo() {
    bool b = true;
    int i = 1;
    float f = 1.0;
    string s = "abcd";
    vector v = { 1, 2, 3 };
    point p = { 1, 2, 3 };
    normal n = { 1, 2, 3 };
    color c = { 1, 2, 3 };
    matrix m = { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 };
}
