test/frontend/fail/ambiguous_call.osl
void foo(vector v) {}
void foo(point p) {}

shader bar() {
    foo({1., 2., 3.});
}
